--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<img src="img/1.jpg" alt="">
-<img src="img/2.jpg" alt="">
-<img src="img/3.jpg" alt="">
+<img src="img/1.jpg" alt=""><br>
+<img src="img/2.jpg" alt=""><br>
+<img src="img/3.jpg" alt=""><br>
 <img src="img/4.jpg" alt="">
